--- a/src/main/resources/templates/clientes/fragments/layout.html
+++ b/src/main/resources/templates/clientes/fragments/layout.html
@@ -55,7 +55,7 @@
 
 		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 			<div class="container">
-				<a class="navbar-brand" id="logo" href="#">Loja Spring<img src="/image/logo.png"></a>
+				<a class="navbar-brand" id="logo" href="/">Loja Spring<img src="/image/logo.png"></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse"
 					data-target="#navbarResponsive" aria-controls="navbarResponsive"
 					aria-expanded="false" aria-label="Toggle navigation">
@@ -72,6 +72,8 @@
 						<li class="nav-item"><a class="nav-link" href="#">Cadastre-se</a><!-- TODO: Criar página cadastro.html -->
 						</li>
 						<li class="nav-item"><a class="nav-link" href="#">Login</a><!-- TODO: Criar página cadastro.html -->
+						</li>
+						<li class="nav-item"><a class="nav-link" href="/carrinho">Carrinho</a><!-- TODO: Criar página cadastro.html -->
 						</li>
 					</ul>
 				</div>
