--- a/src/main/resources/templates/clientes/finalizar-compra.html
+++ b/src/main/resources/templates/clientes/finalizar-compra.html
@@ -10,39 +10,65 @@
 
 <title>Loja Spring</title>
 
-<!-- Bootstrap core CSS -->
-<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-<link href="/webjars/open-iconic/font/css/open-iconic-bootstrap.min.css"
-	rel="stylesheet" />
-
-<link
-	href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-	rel="stylesheet" id="bootstrap-css">
-<script
-	src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script
-	src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<link
-	href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap"
-	rel="stylesheet">
-
 
 </head>
-
-
-
 <body>
 
 	<!-- Page Content -->
 	<section class="layout-content" layout:fragment="corpo">
 		<div class="container">
+			<div>
+				<br> <br> <br>
+				<h1 class="main-heading ">Informações do Usuário</h1>
+				<!-- TODO: Inluir informações do Usuário -->
+				<div class="col-lg-12 cart-totals">
+
+					<table>
+						<tr>
+							<th>Nome</th>
+							<td>Nome Completo do Comprador</td>
+						</tr>
+						<tr>
+							<th>CPF</th>
+							<td>CPF do Comprador</td>
+						</tr>
+						<tr>
+							<th>CEP:</th>
+							<td><input type="text"> CEP</td>
+						</tr>
+						<tr>
+							<th>Endereço</th>
+							<td>Endereço Completo do Comprador</td>
+						</tr>
+						<tr>
+							<th>Forma de Pagamento</th>
+							<td>
+
+								<div class="form-group">
+									<label for="sel1">Forma de Pagamento</label> <select
+										class="form-control" id="sel1">
+										<option>PIX</option>
+										<option>Cartão de Crédito</option>
+										<option>Cartão de Débito</option>
+										<option>Boleto Bancário</option>
+									</select>
+								</div>
+
+							</td>
+						</tr>
+						<tr>
+							<td><button class="btn">Não sou eu</button></td>
+						</tr>
+					</table>
+
+				</div>
 
 
+			</div>
 			<div class="row">
 
 				<div class="col-lg-8">
-					<div class="main-heading ">Carrinho</div>
+					<div class="main-heading ">Itens Escolhidos</div>
 					<div class="table-cart">
 
 						<table>
@@ -108,15 +134,7 @@
 
 							</tbody>
 						</table>
-						<div class="coupon-box">
-							<form action="#" method="get" accept-charset="utf-8">
-								<div class="coupon-input">
-									<input type="text" name="coupon code" placeholder="Coupon Code">
-									<button type="submit" class="round-black-btn">Cupom de
-										Desconto</button>
-								</div>
-							</form>
-						</div>
+
 					</div>
 
 				</div>
@@ -144,45 +162,24 @@
 										<td>Total</td>
 										<td class="price-total">R$<span
 											th:text="${#numbers.formatDecimal(valorTotalCarrinho, 0, 'POINT', 2, 'COMMA')}">
-											<!-- TODO: Implementar o calcularTotalComFrete() do  ValorTotalCarrinhoService.class -->
+												<!-- TODO: Implementar o calcularTotalComFrete() do  ValorTotalCarrinhoService.class -->
 										</span></td>
 									</tr>
 								</tbody>
 							</table>
 							<div class="btn-cart-totals">
-								<a href="/carrinho" class="update round-black-btn" title="">
-									Atualizar Carrinho </a> <a href="/finalizar"
-									class="checkout round-black-btn" title=""> Finalizar Compra</a>
+								<a href="#" class="checkout round-black-btn" title="">
+									Finalizar Compra</a> <a></a>
 							</div>
-
 						</form>
-
+						<br>
 					</div>
-
 				</div>
-
-
-
 			</div>
 		</div>
 	</section>
 
-	<!-- Bootstrap core JavaScript -->
-	<script src="/vendor/jquery/jquery.min.js"></script>
-	<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
-
-
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-	integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-	crossorigin="anonymous"></script>
-<script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-	integrity="	sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-	crossorigin="anonymous"></script>
-
-<script src="js/shop-cart.js"></script>
 
 </html>
