--- a/src/main/resources/templates/clientes/fragments/layout.html
+++ b/src/main/resources/templates/clientes/fragments/layout.html
@@ -43,10 +43,7 @@
 		<nav aria-label=""
 			class="navbar navbar-inverse navbar navbar-dark bg-dark fixed-top">
 			<div class="container-fluid">
-				<div class="navbar-header">
-
-
-				</div>
+				<div class="navbar-header"></div>
 			</div>
 		</nav>
 	</header>
@@ -55,7 +52,12 @@
 
 		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 			<div class="container">
-				<a class="navbar-brand" id="logo" href="/">Loja Spring<img src="/image/logo.png"></a>
+				<a class="navbar-brand" id="logo" href="/">
+					<div class="name-logo">
+						<span>Spring</span>
+						<img src="/image/logo.png">
+					</div>
+				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse"
 					data-target="#navbarResponsive" aria-controls="navbarResponsive"
 					aria-expanded="false" aria-label="Toggle navigation">
@@ -66,15 +68,11 @@
 						<li class="nav-item active"><a class="nav-link" href="/">Principal
 								<span class="sr-only">(current)</span>
 						</a></li>
-						<li class="nav-item"><a class="nav-link" href="#">Sobre</a></li> <!-- TODO: Criar página sobre.html -->
-						<li class="nav-item"><a class="nav-link" href="#">Contato</a><!-- TODO: Criar página contato.html -->
-						</li>
-						<li class="nav-item"><a class="nav-link" href="#">Cadastre-se</a><!-- TODO: Criar página cadastro.html -->
-						</li>
-						<li class="nav-item"><a class="nav-link" href="#">Login</a><!-- TODO: Criar página cadastro.html -->
-						</li>
-						<li class="nav-item"><a class="nav-link" href="/carrinho">Carrinho</a><!-- TODO: Criar página cadastro.html -->
-						</li>
+						<li class="nav-item"><a class="nav-link" href="#">Cadastre-se</a>
+							<!-- TODO: Criar página cadastro.html --></li>
+						<li class="nav-item"><a class="nav-link" href="#">Login</a> <!-- TODO: Criar página cadastro.html --></li>
+						<li class="nav-item"><a class="nav-link" href="/carrinho">Carrinho</a>
+							<!-- TODO: Criar página cadastro.html --></li>
 					</ul>
 				</div>
 			</div>
@@ -90,6 +88,13 @@
 		<div class="container">
 			<p class="m-0 text-center text-white">Copyright &copy; Your
 				Website 2020</p>
+		</div>
+		<div>
+			<ul>
+				<li><a class="nav-link" href="#">Sobre</a></li>
+				<!-- TODO: Criar página sobre.html -->
+				<li><a class="nav-link" href="#">Contato</a> <!-- TODO: Criar página contato.html --></li>
+			</ul>
 		</div>
 	</footer>
 
