--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:layout="http://www.w3.org/1999/xhtml" lang="pt-br"
-	layout:decorate="~{clientes/fragments/layout}">>
+	layout:decorate="~{clientes/fragments/layout}">
+>
 
 <head>
 
@@ -20,92 +21,94 @@
 
 <body>
 	<section class="layout-content" layout:fragment="corpo">
-	<div class="container">
+		<div class="container">
 
-		<div class="row">
+			<div class="row">
 
-			<div class="col-lg-2">
+				<div class="col-lg-2">
 
-				<h3 class="my-4">Categorias</h3>
-				<div class="list-group">
+					<h3 class="my-4">Categorias</h3>
+					<div class="list-group">
 
-					<a href="#" class="list-group-i">Eletrônicos
-						<hr class="solid" />
-					</a> <a href="#" class="list-group-i">Celulares
-						<hr class="solid" />
-					</a> <a href="#" class="list-group-i">Computadores
-						<hr class="solid" />
-					</a>
-					</a> <a href="#" class="list-group-i">Periféricos
-						<hr class="solid" />
-					</a>
-				</div>
-
-			</div>
-			<!-- /.col-lg-3 -->
-
-			<div class="col-lg-10">
-
-				<div id="carouselExampleIndicators" class="carousel slide my-4"
-					data-ride="carousel">
-					<ol class="carousel-indicators">
-						<li data-target="#carouselExampleIndicators" data-slide-to="0"
-							class="active"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-					</ol>
-					<div class="carousel-inner" role="listbox">
-						<div class="carousel-item active">
-							<img class="d-block img-fluid" src="http://placehold.it/900x350"
-								alt="First slide">
-						</div>
-						<div class="carousel-item">
-							<img class="d-block img-fluid" src="http://placehold.it/900x350"
-								alt="Second slide">
-						</div>
-						<div class="carousel-item">
-							<img class="d-block img-fluid" src="http://placehold.it/900x350"
-								alt="Third slide">
-						</div>
+						<a href="#" class="list-group-i">Eletrônicos
+							<hr class="solid" />
+						</a> <a href="#" class="list-group-i">Celulares
+							<hr class="solid" />
+						</a> <a href="#" class="list-group-i">Computadores
+							<hr class="solid" />
+						</a> </a> <a href="#" class="list-group-i">Periféricos
+							<hr class="solid" />
+						</a>
 					</div>
-					<a class="carousel-control-prev" href="#carouselExampleIndicators"
-						role="button" data-slide="prev"> <span
-						class="carousel-control-prev-icon" aria-hidden="true"></span> <span
-						class="sr-only">Previous</span>
-					</a> <a class="carousel-control-next" href="#carouselExampleIndicators"
-						role="button" data-slide="next"> <span
-						class="carousel-control-next-icon" aria-hidden="true"></span> <span
-						class="sr-only">Next</span>
-					</a>
+
 				</div>
+				<!-- /.col-lg-3 -->
 
-				<div class="row">
+				<div class="col-lg-10">
 
-					<div class="col-lg-4 col-md-6 mb-4"
-						th:each="produto : ${listaProdutos}">
-						<div class="card h-100">
-							<div class="single-publication">
+					<div id="carouselExampleIndicators" class="carousel slide my-4"
+						data-ride="carousel">
+						<ol class="carousel-indicators">
+							<li data-target="#carouselExampleIndicators" data-slide-to="0"
+								class="active"></li>
+							<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+							<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+						</ol>
+						<div class="carousel-inner" role="listbox">
+							<div class="carousel-item active">
+								<img class="d-block img-fluid" src="http://placehold.it/900x350"
+									alt="First slide">
+							</div>
+							<div class="carousel-item">
+								<img class="d-block img-fluid" src="http://placehold.it/900x350"
+									alt="Second slide">
+							</div>
+							<div class="carousel-item">
+								<img class="d-block img-fluid" src="http://placehold.it/900x350"
+									alt="Third slide">
+							</div>
+						</div>
+						<a class="carousel-control-prev" href="#carouselExampleIndicators"
+							role="button" data-slide="prev"> <span
+							class="carousel-control-prev-icon" aria-hidden="true"></span> <span
+							class="sr-only">Previous</span>
+						</a> <a class="carousel-control-next"
+							href="#carouselExampleIndicators" role="button" data-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+						</a>
+					</div>
 
-								<a href="#"><img class="card-img-top img-fluid"
-									th:src="@{/produtos/mostrarImagem/{imagem}(imagem=${produto.nomeImagem})}"
-									alt="imagem produto"></a>
-								<div class="publication-content">
-									<div class="card-body">
+					<div class="row">
 
-										<h4 class="card-title">
+						<div class="col-lg-4 col-md-6 mb-4"
+							th:each="produto : ${listaProdutos}">
+							<div class="card h-100">
+								<div class="single-publication">
 
-											<a href="#"><span th:text="${produto.nome}"></span></a>
-										</h4>
-										<h5 class="valor-identificador">
-											R$ <span th:text="${produto.valorVenda}"></span>
-										</h5>
-										<p class="card-text">
-											<span th:text="${produto.descricao}">></span>
-										</p>
-									</div>
-									<div class="add-to-cart">
-										<a th:href="@{/carrinho/adicionar/{id}(id=${produto.id})}"
-										 class="default-btn">Adicione ao carrinho</a>
+									<a href="#"><img class="card-img-top img-fluid"
+										th:src="@{/produtos/mostrarImagem/{imagem}(imagem=${produto.nomeImagem})}"
+										alt="imagem produto"></a>
+									<div class="publication-content">
+										<div class="card-body">
+
+											<h4 class="card-title">
+
+												<a href="#"><span th:text="${produto.nome}"></span></a>
+											</h4>
+
+											<p class="card-text">
+												<span th:text="${produto.descricao}">></span>
+											</p>
+											<h5 class="valor-identificador ">
+												R$ <span
+													th:text="${#numbers.formatDecimal(produto.valorVenda, 0, 'POINT', 2, 'COMMA')}"></span>
+
+											</h5>
+										</div>
+										<div class="add-to-cart">
+											<a th:href="@{/carrinho/adicionar/{id}(id=${produto.id})}"
+												class="default-btn">Adicione ao carrinho</a>
 
 										</div>
 									</div>
