--- a/src/main/resources/templates/administrativo/fragments/layout.html
+++ b/src/main/resources/templates/administrativo/fragments/layout.html
@@ -77,8 +77,8 @@
 					</a></li>
 				</ul>
 
-				<ul class="nav nav-pills">
-					<li class="nav-item"><span class="nav-link active">Papéis</span></li>
+<!-- 				<ul class="nav nav-pills">
+					<li class="nav-item"><span class="nav-link active">Funções</span></li>
 					<li class="nav-item"><a class="nav-link"
 						href="/administrativo/papeis/cadastrar"> <i class="oi oi-plus"></i>
 							<span>Cadastrar </span>
@@ -87,7 +87,7 @@
 						href="/administrativo/papeis/listar"> <i
 							class="oi oi-spreadsheet"></i> <span>Listar </span>
 					</a></li>
-				</ul>
+				</ul> -->
 
 				<ul class="nav nav-pills">
 					<li class="nav-item"><span class="nav-link active">Permissoes</span></li>
