--- a/src/main/resources/templates/clientes/fragments/layout.html
+++ b/src/main/resources/templates/clientes/fragments/layout.html
@@ -50,7 +50,7 @@
 
 	<div class="layout-main">
 
-		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+		<nav class="navbar navbar-expand-lg navbar-light nav-color fixed-top">
 			<div class="container">
 				<a class="navbar-brand" id="logo" href="/">
 					<div class="name-logo">
